# dikdik

./: .gitignore  Taskfile.yml  devbox.json  pyproject.toml
.github/workflows/: pr-check.yml  release.yml
.task/checksum/: pre-commit
src/dikdik/: dict.py  yamlv2.py
test/: test_main.py
